update theme styles: add container max-width and float reset (fix for article links that did not work on small screens)

--- a/src/themes/pelican-alchemy-take-two/alchemy/static/css/theme.css
+++ b/src/themes/pelican-alchemy-take-two/alchemy/static/css/theme.css
@@ -555,8 +555,12 @@ footer .row {
 
   .main {
      padding: 14.9rem 0 3rem 0;
-     display: block; 
+     display: block;
+  }
 
+  .container {
+    float: none;
+    max-width: 100%;
   }
 
   .sidebar {
